--- a/aw07-Kisekis-changed/pos-carts/pom.xml
+++ b/aw07-Kisekis-changed/pos-carts/pom.xml
@@ -19,10 +19,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
@@ -90,6 +86,9 @@
                     <modelNameSuffix>Dto</modelNameSuffix>
                     <apiPackage>com.micropos.carts.api</apiPackage>
                     <modelPackage>com.micropos.carts.dto</modelPackage>
+                    <configOptions>
+                        <reactive>true</reactive>
+                    </configOptions>
                 </configuration>
             </plugin>
         </plugins>
