--- a/aw07-Kisekis-changed/pos-carts/src/main/resources/application.yml
+++ b/aw07-Kisekis-changed/pos-carts/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
+  main:
+    web-application-type: reactive
   application:
     name: cart-service
-
-
 eureka:
   client:
     serviceUrl:
