--- a/aw07-Kisekis-changed/pos-delivery/pom.xml
+++ b/aw07-Kisekis-changed/pos-delivery/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>micropos</artifactId>
@@ -9,22 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>pos-delivery</artifactId>
-    <build>
-        <defaultGoal>install</defaultGoal>
 
-        <plugins>
-            <plugin>
-                <groupId>org.openapitools</groupId>
-                <artifactId>openapi-generator-maven-plugin</artifactId>
-                <configuration>
-                    <modelNameSuffix>Dto</modelNameSuffix>
-                    <apiPackage>com.micropos.delivery.api</apiPackage>
-                    <modelPackage>com.micropos.delivery.dto</modelPackage>
-                </configuration>
-            </plugin>
-
-        </plugins>
-    </build>
     <dependencies>
         <dependency>
             <groupId>com.micropos</groupId>
@@ -49,9 +34,22 @@
 <!--            <version>RELEASE</version>-->
 <!--        </dependency>-->
     </dependencies>
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openapitools</groupId>
+                <artifactId>openapi-generator-maven-plugin</artifactId>
+                <configuration>
+                    <modelNameSuffix>Dto</modelNameSuffix>
+                    <apiPackage>com.micropos.delivery.api</apiPackage>
+                    <modelPackage>com.micropos.delivery.dto</modelPackage>
+                    <configOptions>
+                        <reactive>true</reactive>
+                    </configOptions>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 </project>
