--- a/aw07-Kisekis-changed/pos-products/pom.xml
+++ b/aw07-Kisekis-changed/pos-products/pom.xml
@@ -14,11 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
         <dependency>
             <groupId>org.openapitools</groupId>
@@ -28,7 +24,6 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -53,6 +48,10 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -64,6 +63,9 @@
                     <modelNameSuffix>Dto</modelNameSuffix>
                     <apiPackage>com.micropos.products.api</apiPackage>
                     <modelPackage>com.micropos.products.dto</modelPackage>
+                    <configOptions>
+                        <reactive>true</reactive>
+                    </configOptions>
                 </configuration>
             </plugin>
         </plugins>
